# Lab4-01

./: .pre-commit-config.yaml  pygraph.py  pyproject.toml
.github/workflows/: ci-cd.yml  mian.yml  terrafor.yml  terraform.yml
tests/: conftest.py  test_pygraph.py
