[tool.poetry]
name = "pygraph"
version = "0.1.0"
description = "A simple graph implementation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # 关键修改点
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pdoc3 = "^0.10.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
